[gd_scene load_steps=2 format=3 uid="uid://wtyahv74blg8"]

[ext_resource type="Script" path="res://Scripts/UI/StartScreen.gd" id="1_cg5sv"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_cg5sv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -93.5
offset_right = 53.0
offset_bottom = 93.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="DeckEditorButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Deck Editor"

[node name="BoardEditorButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Board Editor"

[node name="MultiplayerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Multiplayer"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit
"

[connection signal="pressed" from="VBoxContainer/DeckEditorButton" to="." method="onDeckEditorPressed"]
[connection signal="pressed" from="VBoxContainer/BoardEditorButton" to="." method="onBoardEditorPressed"]
[connection signal="pressed" from="VBoxContainer/MultiplayerButton" to="." method="onMultiplayerPressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="onSettingsPressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="onExitPressed"]
